--- a/style.css
+++ b/style.css
@@ -22,3 +22,17 @@ body {
   min-height: 0;
   background: greenyellow;
 }
+
+/* GRID */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr;
+  gap: 7px;
+  padding: 5px;
+}
+
+.tic-tac-toe-grid {
+  padding: 30px;
+  background-color: yellow;
+}
