--- a/style.css
+++ b/style.css
@@ -36,3 +36,20 @@ body {
   padding: 30px;
   background-color: yellow;
 }
+.modal {
+  background-color: bisque;
+  position: absolute;
+  top: 320px;
+  text-align: center;
+  border-radius: 35px;
+  padding: 100px;
+}
+
+.selection-button {
+  padding: 35px;
+  margin: 20px;
+}
+
+.hidden {
+  display: none;
+}
